--- a/user_settings.json
+++ b/user_settings.json
@@ -2,15 +2,13 @@
   // Editor
   "editor.formatOnSave": true,
   "editor.fontWeight": 500,
-  "editor.lineHeight": 2.15,
+  "editor.lineHeight": 2.5,
   "editor.fontFamily": "'JetbrainsMono Nerd Font'",
   "editor.fontSize": 13.5,
   "editor.fontLigatures": true,
   "editor.minimap.enabled": false,
   "editor.semanticHighlighting.enabled": true,
   "editor.tokenColorCustomizations": {
-    // "functions": "",
-    // "keywords": "",
     "[Monokai Pro]": {
       "textMateRules": [
         {
@@ -251,7 +249,8 @@
     }
   },
   "editor.guides.indentation": true,
-  "workbench.tree.indent": 15,
+  "workbench.tree.indent": 20,
+
   "workbench.colorCustomizations": {
     "[Monokai Pro]": {
       "editorBracketHighlight.foreground1": "#87CEFA",
@@ -281,7 +280,8 @@
     "gitDecoration.addedResourceForeground": "#C3E887",
     "gitDecoration.untrackedResourceForeground": "#F77669"
   },
-  "workbench.tree.renderIndentGuides": "none",
+  "workbench.tree.renderIndentGuides": "always",
+  // Icon Theme
   "workbench.iconTheme": "ayu-mirage-zed",
   // Explorer
   "explorer.decorations.badges": false,
@@ -292,36 +292,13 @@
   "terminal.integrated.fontSize": 13,
   "terminal.integrated.lineHeight": 1.6,
   "terminal.integrated.cursorBlinking": true,
-  // Apc
-  "apc.imports": ["/Users/loicdelanoe/Documents/vscode-backup/custom-css.css"],
-  "apc.listRow": {
-    "lists": [
-      "customview-tree",
-      "results",
-      "open-editors",
-      "explorer-folders-view",
-      "outline-tree",
-      "scm-view",
-      "debug-view-content",
-      "debug-breakpoints",
-      "tree",
-      "quick-input-list"
-    ],
-    "height": 32,
-    "fontSize": 13
-  },
-  // "apc.electron": {
-  //   "titleBarStyle": "hiddenInset",
-  //   "trafficLightPosition": {
-  //     "x": 7,
-  //     "y": 5
-  //   }
-  // },
-  "apc.statusBar": {
-    "height": 33
-  },
+  // Inject custom CSS
+  "custom-ui-style.external.imports": [
+    "file:///Users/loicdelanoe/Documents/vscode-backup/custom-css.css"
+  ],
+  "custom-ui-style.font.sansSerif": "IBM Plex Sans",
   // Disable auto-update
-  "update.mode": "none",
+  "update.mode": "default",
   // Auto-generate
   "[vue]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -368,55 +345,6 @@
     "dist": true
   },
   "workbench.editor.titleScrollbarSizing": "large",
-  // "workbench.tree.expandMode": "doubleClick",
-  // "workbench.list.openMode": "doubleClick",
-  // "better-comments.tags": [
-  //   {
-  //     "tag": "!",
-  //     "color": "#FF2D00",
-  //     "strikethrough": false,
-  //     "underline": false,
-  //     "backgroundColor": "transparent",
-  //     "bold": false,
-  //     "italic": false
-  //   },
-  //   {
-  //     "tag": "?",
-  //     "color": "#3498DB",
-  //     "strikethrough": false,
-  //     "underline": false,
-  //     "backgroundColor": "transparent",
-  //     "bold": false,
-  //     "italic": false
-  //   },
-  //   {
-  //     "tag": "//",
-  //     "color": "#474747",
-  //     "strikethrough": true,
-  //     "underline": false,
-  //     "backgroundColor": "transparent",
-  //     "bold": false,
-  //     "italic": false
-  //   },
-  //   {
-  //     "tag": "todo",
-  //     "color": "#87CEFA",
-  //     "strikethrough": false,
-  //     "underline": false,
-  //     "backgroundColor": "transparent",
-  //     "bold": false,
-  //     "italic": false
-  //   },
-  //   {
-  //     "tag": "*",
-  //     "color": "#98C379",
-  //     "strikethrough": false,
-  //     "underline": false,
-  //     "backgroundColor": "transparent",
-  //     "bold": false,
-  //     "italic": false
-  //   }
-  // ],
   "workbench.fontAliasing": "antialiased",
   "workbench.tree.enableStickyScroll": false,
   "workbench.list.horizontalScrolling": true,
@@ -543,6 +471,12 @@
   "editor.cursorBlinking": "smooth",
   "files.saveConflictResolution": "overwriteFileOnDisk",
   "svg.preview.transparencyGrid": true,
-  "workbench.colorTheme": "Monokai Pro",
-  "workbench.activityBar.location": "hidden"
+  "workbench.colorTheme": "Alt Catppuccin Mocha",
+  "vue.autoInsert.dotValue": true,
+  "editor.quickSuggestions": {
+    "strings": "on"
+  },
+  "workbench.activityBar.location": "hidden",
+  "github.copilot.nextEditSuggestions.enabled": true,
+  "codeium.enableCodeLens": false
 }
